--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .zig-cache
 zig-out
 .direnv
-include/wlr-layer-shell-protocol.h
-include/xdg-output-protocol.h
-include/xdg-shell-protocol.h
+include/wlr-layer-shell-unstable-v1-client-protocol.h
+include/xdg-output-client-protocol.h
+include/xdg-shell-client-protocol.h
+lib/wlr-layer-shell-unstable-v1-client-protocol.c
+lib/xdg-output-client-protocol.c
+lib/xdg-shell-client-protocol.c
 .cache
 result
